@@ -1323,9 +1323,20 @@ new Test.Unit.Runner({
       elt.absolutize();
       this.assertUndefined(elt._originalLeft, 'absolutize() did not detect absolute positioning');
     }, this);
+    
     // invoking on "absolute" positioned element should return element
     var element = $('absolute_fixed_undefined').setStyle({position: 'absolute'});
     this.assertEqual(element, element.absolutize());
+    element.style.position = '';
+    
+    // test relatively positioned element with no height specified for IE7
+    var element = $('absolute_relative'),
+    dimensions = element.getDimensions();
+    
+    element.absolutize();
+    this.assertIdentical(dimensions.width, element.getDimensions().width);
+    this.assertIdentical(dimensions.height, element.getDimensions().height);
+    element.relativize();
   },
   
   testRelativize: function() {
